# Hartonomous-Opus

./: .env  .env.example  .gitattributes  .gitignore  .gitmodules  .rooignore  03_testcpp.txt  06_setup-db-log.txt  ALGORITHMIC_EFFICIENCY.md  ARCHITECTURE.md  AUDIT_AND_PLAN.md  AUDIT_REPORT.md  DEPLOYMENT_AUDIT.md  FILE_BY_FILE_CODEBASE_AUDIT.md  GRANULAR_AUDIT.md  HARTONOMOUS_INTEGRATION_COMPLETE.md  Hartonomous-Opus.sln  INTEGRATION_GAMEPLAN.md  PROJECT_AUDIT.md  PURE_HARTONOMOUS_ARCHITECTURE.md  QUICKSTART_OPUS_ORCHESTRATOR.md  README.md  READY_TO_TEST.md  SCRIPTS.md  SEMANTIC_WEB_DESIGN.md  SPATIAL_INDEX_ARCHITECTURE.md  SYSTEM_STATUS_2026-01-10.md  VerifyGeometry.cs  VerifyGeometry.csproj  build-log.txt  ctest-log.txt  full-build-test.sh  ingest-model-log.txt  ingest-models-log.txt  run_csharp_tests.sh  setup-log.txt  setup.sh  test_32bit_coords.cpp  test_eigenvalues.cpp  test_ranks.cpp  (+4 more)
Hartonomous-Benchmark/: CMakeLists.txt  CMakePresets.json  README.md  toolchain.cmake  validate.ps1
Hartonomous-Benchmark/.github/workflows/: benchmark.yml
Hartonomous-Benchmark/benchmarks/: CMakeLists.txt  avx_vector_arithmetic_benchmark.hpp  benchmark_main.cpp  eigen_lu_solve_benchmark.hpp  eigen_matrix_multiply_benchmark.hpp  eigen_sparse_benchmark.hpp  eigen_svd_benchmark.hpp  fft_benchmark.hpp  hnsw_index_build_benchmark.hpp  hnsw_insertion_benchmark.hpp  hnsw_search_benchmark.hpp  hybrid_eigen_avx_benchmark.hpp  hybrid_mkl_simd_benchmark.hpp  linear_solve_benchmark.hpp  matrix_benchmark.hpp  memory_bandwidth_benchmark.hpp  micro_benchmarks.hpp  rng_benchmark.hpp  simd_intrinsics_benchmark.hpp  vnni_dot_product_benchmark.hpp
Hartonomous-Benchmark/logs/: analyze.txt  build.txt  compile.txt
Hartonomous-Benchmark/patches/: patch.ps1
Hartonomous-Benchmark/plans/: benchmark_framework_design.md
Hartonomous-Benchmark/results/: hardware_info.txt  new_framework_results.csv  results.json
Hartonomous-Benchmark/scripts/: analyze_results.bat  analyze_results.ps1  analyze_results.sh  run_benchmarks.bat  run_benchmarks.ps1  run_benchmarks.sh
Hartonomous-Benchmark/src/: CMakeLists.txt  hardware.cpp  hardware.hpp
Hartonomous-Benchmark/src/benchmark/: CMakeLists.txt  benchmark_base.hpp  benchmark_factory.hpp  benchmark_registry.hpp
Hartonomous-Benchmark/src/math/: CMakeLists.txt  vector_math.hpp
Hartonomous-Benchmark/src/results/: CMakeLists.txt  result_aggregator.hpp
Hartonomous-Benchmark/src/timing/: CMakeLists.txt  timer.hpp
Hartonomous-Orchestrator/trash/: CMakeLists.txt  Dockerfile  LAUNCH_GUIDE.md  README.md  architecture.md  config.yaml  docker-compose.yml  k8s-deployment.yaml  vcpkg.json
Hartonomous-Orchestrator/trash/include/: config.hpp  embedding_client.hpp  generative_client.hpp  http_client.hpp  http_server.hpp  logging.hpp  metrics.hpp  orchestrator.hpp  qdrant_client.hpp  reranking_client.hpp
Hartonomous-Orchestrator/trash/scripts/: build.bat  build.sh  health-check.sh  launch.bat  launch.sh  test-basic.sh
Hartonomous-Orchestrator/trash/src/: CMakeLists.txt  config.cpp  embedding_client.cpp  generative_client.cpp  http_client.cpp  http_server.cpp  logging.cpp  main.cpp  metrics.cpp  orchestrator.cpp  qdrant_client.cpp  reranking_client.cpp
Hartonomous-Orchestrator/trash/tests/: CMakeLists.txt  test_config.cpp  test_embedding_client.cpp  test_integration.cpp  test_main.cpp  test_orchestrator.cpp
cpp/: CMakeLists.txt  CMakeLists_test.txt  hypercube.control  run-tests-release.bat  test_atom_registry.cpp  test_eigen_solver_paths.cpp  test_hilbert_debug.cpp  test_semantic_debug.cpp
cpp/build-pg-extensions/: cpu_features_test
cpp/cmake/: BuildTargets.cmake  CompilerFlags.cmake  FindDependencies.cmake  InstallConfig.cmake  TargetsCore.cmake  TargetsPgExtensions.cmake  TargetsTests.cmake  TargetsTools.cmake  cpu_features_test  cpu_features_test.cpp
cpp/include/: hypercube_c.h  pg_atomics_compat.h
cpp/include/hypercube/: atom_calculator.hpp  atom_registry.hpp  backend.hpp  blake3.hpp  blake3_simd.hpp  config.hpp  coordinate_utilities.hpp  coordinates.hpp  cpu_features.h  cpu_features.hpp  dense_registry.hpp  deterministic_grid4d.hpp  dispatch.h  embedding_c.h  embedding_ops.hpp  error.hpp  factory.hpp  function_pointers.hpp  generative.hpp  generative_c.h  hilbert.hpp  hilbert_batch.hpp  intelligence_c.h  isa_class.h  kernel_dispatch.h  lanczos.hpp  laplacian_4d.hpp  linear_algebra.hpp  logging.hpp  ml_operations.hpp  ops.hpp  plugin.hpp  runtime_dispatch.h  semantic_ordering.hpp  simd_intrinsics.hpp  simd_kernels.hpp  superfibonacci.hpp  tensor_classifier.hpp  thread_config.hpp  (+3 more)
cpp/sql/: embedding_ops--1.0.sql  embedding_ops.control  generative--1.0.sql  generative.control  hypercube--1.0.sql  hypercube_ops--1.0.sql  hypercube_ops.control  semantic_ops--1.0.sql  semantic_ops.control
cpp/src/: atom_calculator.cpp  blake3_pg.cpp  coordinates.cpp  cpe_ingest.cpp  embedding_c.cpp  extract_embeddings.cpp  generative_c.cpp  grammar_ingest.cpp  hilbert.cpp  hypercube.cpp  hypercube_c.cpp  hypercube_ops.cpp  ingest_model.cpp  ingest_safetensor.cpp  ingest_safetensor_4d.cpp  ingest_safetensor_universal.cpp  lanczos.cpp  laplacian_4d.cpp  manifold_4d.cpp  manifold_project.cpp  ml_operations.cpp  ops.cpp  plugin_registry.cpp  seed_atoms.cpp  seed_atoms_direct.cpp  seed_atoms_parallel.cpp  semantic_ingest.cpp  semantic_ops.cpp  sequitur_ingest.cpp  simd_kernels_avx2.cpp  simd_kernels_avx2_vnni.cpp  simd_kernels_avx512.cpp  simd_kernels_avx512_vnni.cpp  simd_kernels_baseline.cpp  simd_kernels_distance.cpp  simd_kernels_sse42.cpp  simd_kernels_vector.cpp  test_safetensor_fix.cpp  vocab_ingest.cpp  vocabulary_ingest.cpp
cpp/tests/: debug_semantic_order.cpp  test_blake3.cpp  test_clustering.cpp  test_composition_child_insertion.cpp  test_coordinates.cpp  test_cpu_features.cpp  test_hilbert.cpp  test_int8_quantization.cpp  test_integration.cpp  test_lanczos_debug.cpp  test_laplacian_4d.cpp  test_new_cpu_features.cpp  test_query_api.cpp  test_semantic.cpp  test_simd_dispatch.cpp  test_thread_config.cpp  test_unicode_seeding.cpp  test_utf8_fix.cpp  test_vocab_parse.cpp
(+525 files in other folders)
